# mod_vad

./: .gitignore  LICENSE  Makefile  Makefile.am  README.md  mod_vad.c  vad.conf.xml
